added hopefully perfect files

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Mon Dec 19 2022 18:49:17 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Mon Dec 19 2022 19:35:22 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="63a0798c30164e930df21496" data-wf-site="63a0798c30164e0ad3f2148b">
 <head>
   <meta charset="utf-8">
@@ -174,7 +174,7 @@
   <div class="section-project wf-section">
     <div class="container w-container">
       <div class="content-div">
-        <div class="image-wrap"><img src="images/_A0A1847-breit.jpg" loading="lazy" sizes="(max-width: 479px) 92vw, (max-width: 991px) 90vw, 840px" srcset="images/_A0A1847-breit-p-1080.jpeg 1080w, images/_A0A1847-breit.jpg 1200w" alt="" class="image"></div>
+        <div class="image-wrap"><img src="images/eton-breit.jpg" loading="lazy" sizes="(max-width: 479px) 92vw, (max-width: 991px) 90vw, 840px" srcset="images/eton-breit.jpg 1080w, images/eton-breit.jpg 1200w" alt="" class="image"></div>
         <div class="project-title-div">
           <h1 class="project-title">Eton:</h1>
           <div class="project-line">Recycling reimagined</div>
